--- a/ui-app/src/components/home/Home.module.scss
+++ b/ui-app/src/components/home/Home.module.scss
@@ -1,6 +1,8 @@
 .home{
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: blueviolet;
   padding-top: 5vh;
 }
