--- a/ui-app/src/App.module.scss
+++ b/ui-app/src/App.module.scss
@@ -11,4 +11,12 @@
 }
 .footer{
   background-color: blueviolet;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  height: auto;
+  padding: 0;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
 }
