--- a/ui-app/src/components/Footer/Footer.module.scss
+++ b/ui-app/src/components/Footer/Footer.module.scss
@@ -29,6 +29,9 @@
       justify-content: center;
       align-items: center;
       border: none;
+      &:hover{
+        cursor: pointer;
+      }
       svg{
         font-size: 2rem;
         font-family: myFont, sans-serif;
